# audiohacked

./: .gitignore  README.md  gpt-boot.sh  index.html  main-linux.cpp  main-win.cpp  overlay-opengl.cpp  params.json  python-links.md  python_logger.py  render-opengl.cpp  shared_memory_accessors.py  stm32f4-gitlab.md  svn-authors.txt
DDPSJabber/: CMakeLists.txt  ChatAccount.cpp  ChatAccount.h  ChatApp.cpp  ChatApp.h  ChatCommon.cpp  ChatCommon.h  ChatConnection.cpp  ChatConnection.h  ChatConnectionThread.cpp  ChatConnectionThread.h  ChatGroup.cpp  ChatGroup.h  ChatMessage.cpp  ChatMessage.h  ChatRegister.cpp  ChatRegister.h  ChatRoster.cpp  ChatRoster.h  ChatRosterData.cpp  ChatRosterData.h  ChatRosterWindow.cpp  ChatRosterWindow.h  ChatWindow.cpp  ChatWindow.h  ChatWindowThread.cpp  ChatWindowThread.h
Game-Overlay/: CMakeLists.txt  TODO.txt  error-glfw.cpp  error.hpp  keyboard-glfw.cpp  keyboard.hpp  main-mac.cpp  main.hpp  overlay.hpp  render.hpp  settings.hpp  text-opengl.cpp  text.hpp  win-dll.cpp
MaNGOS_InstallerScripts/: custom.ini  fresh.dbinst  install-mangos-database.py  make-mangos-server.py  update.dbinst  update_dbinst.sql  windows_builder_installer.nsi
MaNGOS_InstallerScripts/libs/: dep_check.py  fetch_repos.py  linux_build.py  windows_build.py  windows_registry.py
MaNGOS_InstallerScripts/libs/MySQLdb/: MANIFEST.in  README  _mysql.c  _mysql.h  _mysql_connections.c  _mysql_fields.c  _mysql_results.c  make_ER.sh  metadata.cfg  setup.cfg  setup.py  site.cfg
MaNGOS_InstallerScripts/libs/MySQLdb/MySQLdb/: __init__.py  connections.py  converters.py  cursors.py  exceptions.py  release.py  times.py
MaNGOS_InstallerScripts/libs/MySQLdb/MySQLdb/constants/: CLIENT.py  CR.py  ER.py  FIELD_TYPE.py  FLAG.py  REFRESH.py  __init__.py
MaNGOS_InstallerScripts/libs/MySQLdb/tests/: dbapi20.py  test_MySQLdb_capabilities.py
MaNGOS_InstallerScripts/libs/git/: ._actor.py  cmd.py
MaNGOS_InstallerScripts_Linux/: dep_check.py  install-mangos-database-python3.py  install-mangos-database.py  make-mangos-server.py  make-mangos-server.sh  mangos.dbinst  update.dbinst  windows_build.py
PrivateWoWLauncher/: CMakeLists.txt  LauncherApp.cpp  LauncherApp.h  LauncherConfig.h.in  LauncherFilefn.cpp  LauncherFilefn.h  LauncherFrame.cpp  LauncherFrame.h  LauncherPanel.cpp  LauncherPanel.h  LauncherRealmlistPanel.cpp  LauncherRealmlistPanel.h  LauncherRegistry.cpp  LauncherRegistry.h  LauncherUserList.cpp  LauncherUserList.h
archlinux-install/: chroot.txt  install.txt  partition.txt
compiler/: Makefile
cs353-project1/: .project  ClientNode.java  GlobalDataStore.java  Makefile  README  TokenFrame.java  tokenring.java
cs353-project2/: .classpath  BridgeNode.java  BridgeTokenFrame.java  ClientNode.java  ClientNodeRing0.java  ClientNodeRing1.java  GlobalDataStore.java  Makefile  NodeFramework.java  Ring0ClientNode.java  Ring0DataStore.java  Ring0TokenFrame.java  Ring1ClientNode.java  Ring1DataStore.java  Ring1TokenFrame.java  RoutingTable.java  tokenring.java
cs353-project2/extra/: Ring0DataStore.java  Ring0TokenFrame.java  Ring1DataStore.java  Ring1TokenFrame.java
gentoo_overlay/mac-server/dotmac/: Manifest  dotmac-0.5.ebuild
gentoo_overlay/www-servers/apache/: Manifest  apache-2.2.8.ebuild
ps2mc/: Makefile  device-junk.c  device.c  main-backup.c  main-backup2.c  ps1.h  ps1_info.c  ps1_info.h  ps1_mc.c  ps1_mc.h  ps2.h  ps2_mc.c  ps2_mc.h  ps2_mc_ecc.c  ps2_mc_erase.c  ps2_mc_read.c  ps2_mc_write.c  psx.h  psx_debug.c  psx_usb.c  psx_usb.h  usb_adaptor.c  usb_adaptor.h
raspberrypi/: archlinux-image.sh
usbreset/: usbreset  usbreset_hammer.sh
wxbencode/: CMakeLists.txt  wxbencode.cpp  wxbencode.hpp  wxbencode_print.cpp  wxbencode_read.cpp  wxbencode_write.cpp
